# tekastory

./: LICENSE  README.html  README.md  index.html  metadata.json  package.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon-app.icns
src-tauri/src/: main.rs
src/components/canvas/: Panel.tsx  StoryboardCanvas.tsx
src/components/common/: LogoComponent.tsx
src/components/editors/: EndPageEditor.tsx  LogoControls.tsx  LogoEditor.tsx  TitlePageEditor.tsx
src/components/layout/: Header.tsx
src/components/pdf/: PDFRenderer.tsx
src/components/preview/: Previews.tsx
src/components/ui/: Button.tsx  Icon.tsx  ImageUpload.tsx  Input.tsx  LoadingOverlay.tsx  TextArea.tsx
src/config/: content.ts  loading-messages.ts  theme.ts
src/constants/: index.ts
src/hooks/: use-keyboard-shortcuts.ts
src/lib/: asset-service.ts  fonts.ts  log.ts  page-renderer-helpers.ts  panel-template.ts  pdf-helpers.ts  pdf-service.ts  project-service.ts  tauri-helpers.ts
src/store/: project-store.ts
src/types/: index.ts
