
[package]
name = "mistory"
version = "0.1.0"
description = "A powerful and intuitive application for creating, managing, and exporting storyboards."
authors = ["Mundhir Werner"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "window-set-focus", "dialog-all", "fs-all", "shell-open", "window-create", "window-close", "window-set-title"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
